# autograd

./: .gitignore  LICENSE  README  pyproject.toml  setup.py
src/autograd/: __init__.py  autograd.py  scalar.py  tensor.py
tests/: test_scalar_ops.py  test_tensor_ops.py
