[project]
name = "autograd"
version = "0.0.1"
authors = [
  { name="Ira Parsons", email="" },
]
description = "A lightweight autograd package"
readme = "README"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/IParsons1000/autograd"
Issues = "https://github.com/IParsons1000/autograd/issues"